[gd_scene load_steps=25 format=3 uid="uid://mtilpmnd7m7y"]

[ext_resource type="Script" uid="uid://c3wghgg2g717r" path="res://scripts/main_game/patient.gd" id="1_s1xdg"]
[ext_resource type="Texture2D" uid="uid://dj84m1ovp6jep" path="res://assets/patient/blank_parts/torso.png" id="3_5mt75"]
[ext_resource type="Shader" uid="uid://bxfmwgtfjfhjo" path="res://resources/shaders/shadow.gdshader" id="4_ddug4"]
[ext_resource type="Texture2D" uid="uid://d0nxnu1lno442" path="res://assets/patient/eyes/eyes_07.png" id="6_5mt75"]
[ext_resource type="Texture2D" uid="uid://cydyqswqfl3mb" path="res://assets/patient/blank_parts/head.png" id="6_6vb6e"]
[ext_resource type="Texture2D" uid="uid://c31kxhqc57r52" path="res://assets/patient/hair/hair_09.png" id="7_6vb6e"]
[ext_resource type="Texture2D" uid="uid://bhaii651jxouo" path="res://assets/patient/blank_parts/leg.png" id="8_5mt75"]
[ext_resource type="Texture2D" uid="uid://8guy4d6qos1b" path="res://assets/patient/blank_parts/arm.png" id="8_q6v5p"]
[ext_resource type="Script" uid="uid://me7cgjqr5843" path="res://scripts/main_game/patient_drag.gd" id="9_ddug4"]
[ext_resource type="Script" uid="uid://bxu1ceexvxg2" path="res://scripts/main_game/patient_skin_manager.gd" id="27_jmvsg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6vb6e"]
shader = ExtResource("4_ddug4")
shader_parameter/disable_rotating = false
shader_parameter/area_scale = 1.5
shader_parameter/shadow_color = Color(0.263, 0.42, 0.447, 1)
shader_parameter/key_color = Color(0.298, 0.498, 0.471, 1)
shader_parameter/key_threshold = 0.02

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vb6e"]
size = Vector2(167, 120)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q6v5p"]
shader = ExtResource("4_ddug4")
shader_parameter/disable_rotating = false
shader_parameter/area_scale = 1.5
shader_parameter/shadow_color = Color(0.263, 0.42, 0.447, 1)
shader_parameter/key_color = Color(0.298, 0.498, 0.471, 1)
shader_parameter/key_threshold = 0.02

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfgv1"]
size = Vector2(46, 66)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3dkft"]
shader = ExtResource("4_ddug4")
shader_parameter/disable_rotating = false
shader_parameter/area_scale = 1.5
shader_parameter/shadow_color = Color(0.263, 0.42, 0.447, 1)
shader_parameter/key_color = Color(0.298, 0.498, 0.471, 1)
shader_parameter/key_threshold = 0.02

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5mt75"]
radius = 17.740414
height = 182.64925

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xkswm"]
shader = ExtResource("4_ddug4")
shader_parameter/disable_rotating = false
shader_parameter/area_scale = 1.5
shader_parameter/shadow_color = Color(0.263, 0.42, 0.447, 1)
shader_parameter/key_color = Color(0.298, 0.498, 0.471, 1)
shader_parameter/key_threshold = 0.02

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5mt75"]
shader = ExtResource("4_ddug4")
shader_parameter/disable_rotating = false
shader_parameter/area_scale = 1.5
shader_parameter/shadow_color = Color(0.263, 0.42, 0.447, 1)
shader_parameter/key_color = Color(0.298, 0.498, 0.471, 1)
shader_parameter/key_threshold = 0.02

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6vb6e"]
radius = 15.969711
height = 165.52567

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vfgv1"]
shader = ExtResource("4_ddug4")
shader_parameter/disable_rotating = false
shader_parameter/area_scale = 1.5
shader_parameter/shadow_color = Color(0.263, 0.42, 0.447, 1)
shader_parameter/key_color = Color(0.298, 0.498, 0.471, 1)
shader_parameter/key_threshold = 0.02

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mt75"]
size = Vector2(521.5, 293)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dkft"]
size = Vector2(340.5, 476)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xkswm"]
size = Vector2(340.5, 476)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6v5p"]
size = Vector2(581, 285)

[node name="Patient" type="Node2D"]
script = ExtResource("1_s1xdg")

[node name="DragManager" type="Node2D" parent="."]
script = ExtResource("9_ddug4")

[node name="MousePin" type="PinJoint2D" parent="DragManager"]
node_a = NodePath("MouseBody")
softness = 1.0

[node name="MouseBody" type="StaticBody2D" parent="DragManager/MousePin"]

[node name="Pins" type="Node2D" parent="."]

[node name="PinJoint2D" type="PinJoint2D" parent="Pins"]
position = Vector2(-192, 0)
node_a = NodePath("../../BodyParts/Torso")
node_b = NodePath("../../BodyParts/Head")
bias = 0.9
disable_collision = false

[node name="PinJoint2D2" type="PinJoint2D" parent="Pins"]
position = Vector2(-147, -60)
node_a = NodePath("../../BodyParts/Torso")
node_b = NodePath("../../BodyParts/LeftArm")
bias = 0.9
disable_collision = false

[node name="PinJoint2D3" type="PinJoint2D" parent="Pins"]
position = Vector2(-147, 60)
node_a = NodePath("../../BodyParts/Torso")
node_b = NodePath("../../BodyParts/RightArm")
bias = 0.9
disable_collision = false
angular_limit_lower = -2.0943952

[node name="PinJoint2D4" type="PinJoint2D" parent="Pins"]
position = Vector2(31, 45)
node_a = NodePath("../../BodyParts/Torso")
node_b = NodePath("../../BodyParts/RightLeg")
bias = 0.9
disable_collision = false

[node name="PinJoint2D5" type="PinJoint2D" parent="Pins"]
position = Vector2(28, -45)
node_a = NodePath("../../BodyParts/Torso")
node_b = NodePath("../../BodyParts/LeftLeg")
bias = 0.9
disable_collision = false

[node name="BodyParts" type="Node2D" parent="."]
z_index = 7
y_sort_enabled = true

[node name="Torso" type="RigidBody2D" parent="BodyParts"]
y_sort_enabled = true
position = Vector2(-68, 0)
collision_layer = 128
collision_mask = 128
gravity_scale = 0.0
freeze = true
freeze_mode = 1

[node name="shadow" type="Sprite2D" parent="BodyParts/Torso"]
z_index = -6
material = SubResource("ShaderMaterial_6vb6e")
texture = ExtResource("3_5mt75")

[node name="blank_torso" type="Sprite2D" parent="BodyParts/Torso"]
z_index = -5
texture = ExtResource("3_5mt75")

[node name="torso_skin" type="Sprite2D" parent="BodyParts/Torso"]
z_index = -5

[node name="collision" type="CollisionShape2D" parent="BodyParts/Torso"]
position = Vector2(-25.5, 0)
shape = SubResource("RectangleShape2D_6vb6e")

[node name="Head" type="RigidBody2D" parent="BodyParts"]
y_sort_enabled = true
position = Vector2(-235, 0)
collision_layer = 704
collision_mask = 128
input_pickable = true
mass = 35.0
gravity_scale = 0.0
center_of_mass_mode = 1
center_of_mass = Vector2(20, 0)
linear_damp = 2.0
angular_velocity = 17.453293
angular_damp = 32.0

[node name="shadow" type="Sprite2D" parent="BodyParts/Head"]
z_index = -6
material = SubResource("ShaderMaterial_q6v5p")
texture = ExtResource("6_6vb6e")

[node name="blank_head" type="Sprite2D" parent="BodyParts/Head"]
z_index = -4
texture = ExtResource("6_6vb6e")

[node name="mouth" type="Sprite2D" parent="BodyParts/Head"]
z_index = -4

[node name="eyes" type="Sprite2D" parent="BodyParts/Head"]
z_index = -4
texture = ExtResource("6_5mt75")

[node name="hair" type="Sprite2D" parent="BodyParts/Head"]
self_modulate = Color(0.101960786, 0.07450981, 0.0627451, 1)
z_index = -3
position = Vector2(-35, 0)
texture = ExtResource("7_6vb6e")

[node name="collision" type="CollisionShape2D" parent="BodyParts/Head"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_vfgv1")

[node name="LeftLeg" type="RigidBody2D" parent="BodyParts"]
y_sort_enabled = true
position = Vector2(150, -70)
rotation = -0.23038344
collision_layer = 48
collision_mask = 16
input_pickable = true
mass = 35.0
gravity_scale = 0.0
center_of_mass_mode = 1
center_of_mass = Vector2(-30, 0)
linear_damp = 2.0
angular_velocity = 17.453293
angular_damp = 10.0

[node name="shadow" type="Sprite2D" parent="BodyParts/LeftLeg"]
z_index = -6
material = SubResource("ShaderMaterial_3dkft")
texture = ExtResource("8_5mt75")

[node name="blank_leg" type="Sprite2D" parent="BodyParts/LeftLeg"]
z_index = -2
texture = ExtResource("8_5mt75")

[node name="leg_skin" type="Sprite2D" parent="BodyParts/LeftLeg"]
z_index = -2

[node name="collision" type="CollisionShape2D" parent="BodyParts/LeftLeg"]
position = Vector2(45, 0)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_5mt75")

[node name="RightLeg" type="RigidBody2D" parent="BodyParts"]
y_sort_enabled = true
position = Vector2(149, 70)
rotation = 0.23561949
collision_layer = 48
collision_mask = 32
input_pickable = true
mass = 35.0
gravity_scale = 0.0
center_of_mass_mode = 1
center_of_mass = Vector2(-30, 0)
linear_damp = 2.0
angular_velocity = 17.453293
angular_damp = 10.0

[node name="shadow" type="Sprite2D" parent="BodyParts/RightLeg"]
z_index = -6
material = SubResource("ShaderMaterial_xkswm")
texture = ExtResource("8_5mt75")

[node name="blank_leg" type="Sprite2D" parent="BodyParts/RightLeg"]
z_index = -2
texture = ExtResource("8_5mt75")
flip_v = true

[node name="leg_skin" type="Sprite2D" parent="BodyParts/RightLeg"]
z_index = -2
flip_v = true

[node name="collision" type="CollisionShape2D" parent="BodyParts/RightLeg"]
position = Vector2(45, 0)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_5mt75")

[node name="LeftArm" type="RigidBody2D" parent="BodyParts"]
y_sort_enabled = true
position = Vector2(-71, -105)
rotation = -0.49741888
scale = Vector2(0.99999994, 0.99999994)
collision_layer = 64
collision_mask = 64
input_pickable = true
mass = 35.0
gravity_scale = 0.0
center_of_mass_mode = 1
center_of_mass = Vector2(-30, 0)
linear_damp = 2.0
angular_velocity = 17.453293
angular_damp = 10.0

[node name="shadow" type="Sprite2D" parent="BodyParts/LeftArm"]
z_index = -6
material = SubResource("ShaderMaterial_5mt75")
scale = Vector2(1.0000001, 1.0000001)
texture = ExtResource("8_q6v5p")

[node name="blank_arm" type="Sprite2D" parent="BodyParts/LeftArm"]
z_index = -1
texture = ExtResource("8_q6v5p")

[node name="arm_skin" type="Sprite2D" parent="BodyParts/LeftArm"]
z_index = -1

[node name="collision" type="CollisionShape2D" parent="BodyParts/LeftArm"]
position = Vector2(22.825, 0)
rotation = 1.5707964
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("CapsuleShape2D_6vb6e")

[node name="RightArm" type="RigidBody2D" parent="BodyParts"]
y_sort_enabled = true
position = Vector2(-72, 105)
rotation = 0.50963616
collision_layer = 512
collision_mask = 512
input_pickable = true
mass = 35.0
gravity_scale = 0.0
center_of_mass_mode = 1
center_of_mass = Vector2(-30, 0)
linear_damp = 2.0
angular_velocity = 17.453293
angular_damp = 10.0

[node name="shadow" type="Sprite2D" parent="BodyParts/RightArm"]
z_index = -6
material = SubResource("ShaderMaterial_vfgv1")
texture = ExtResource("8_q6v5p")

[node name="blank_arm" type="Sprite2D" parent="BodyParts/RightArm"]
z_index = -1
texture = ExtResource("8_q6v5p")
flip_v = true

[node name="arm_skin" type="Sprite2D" parent="BodyParts/RightArm"]
z_index = -1
texture = ExtResource("8_q6v5p")
flip_v = true

[node name="collision" type="CollisionShape2D" parent="BodyParts/RightArm"]
position = Vector2(23.21, 0)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_6vb6e")

[node name="PatientSkinManager" type="Node2D" parent="."]
script = ExtResource("27_jmvsg")

[node name="Blockers" type="Node2D" parent="."]
visible = false

[node name="left_leg_blocker" type="StaticBody2D" parent="Blockers"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blockers/left_leg_blocker"]
position = Vector2(102, 159.5)
shape = SubResource("RectangleShape2D_5mt75")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Blockers/left_leg_blocker"]
position = Vector2(-152, -5)
shape = SubResource("RectangleShape2D_3dkft")

[node name="right_leg_blocker" type="StaticBody2D" parent="Blockers"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blockers/right_leg_blocker"]
position = Vector2(98.25, -160)
shape = SubResource("RectangleShape2D_5mt75")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Blockers/right_leg_blocker"]
position = Vector2(-152, -4)
shape = SubResource("RectangleShape2D_xkswm")

[node name="left_arm_blocker" type="StaticBody2D" parent="Blockers"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blockers/left_arm_blocker"]
position = Vector2(-156.5, 89.5)
shape = SubResource("RectangleShape2D_q6v5p")

[node name="right_arm_blocker" type="StaticBody2D" parent="Blockers"]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blockers/right_arm_blocker"]
position = Vector2(-156.5, -90)
shape = SubResource("RectangleShape2D_q6v5p")
